fixed navbar login input wrapping

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -88,3 +88,21 @@ body {
 	text-align: center;
 	margin-bottom:2px;
 }
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+    .navbar-collapse.collapsing{
+         overflow:hidden; !important;
+    }
+    .navbar-header .collapse, .navbar-toggle {
+        display:block !important;
+    }
+    .navbar-header {
+        float:none;
+    }
+}
